--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,9 +1,47 @@
+h1{
+    background-color: #2980b9;
+    color: white;
+    margin: 0;
+    padding: 10px 20px;
+    font-size: 24px;
+    font-family: Helvetica, sans-serif;
+    text-transform: uppercase;
+    font-weight: normal;
+}
 #container{
     width: 360px;
-    margin:20px auto;
-    border: 2px solid grey;
+    margin:10% auto;
+    background-color: #f7f7f7;
+    box-shadow: 10px 10px 15px rgba(0,0,0,0.1);
 }
 .completed{
     color: grey;
     text-decoration: line-through;
+}
+ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+li{
+    background-color: white;
+    height: 40px;
+    line-height: 40px;
+}
+li:nth-child(2n){
+    background-color: #f7f7f7;
+}
+input[type='text']{
+    font-size: 18px;
+    background-color: #f7f7f7;
+    width: 100%;
+    margin: 0;
+    color: #2980b9;
+    padding: 5px auto;
+    box-sizing: border-box;
+}
+input:focus{
+    background-color: white;
+    outline: none;
+    border: 2px solid #2980b9;
 }
