--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,9 +1,10 @@
 html{
     /*background:linear-gradient(to right,rgba(21, 67, 96 ,1),rgba(26, 188, 156,0.5));*/
     background: url('../todo.svg');
-    background-position: 100% 100%;
+    background-position: 80% 100%;
     background-attachment: fixed;
     background-repeat: no-repeat;
+    background-size: contain;
     /*background-color: #070d21;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3CradialGradient id='a' gradientUnits='objectBoundingBox'%3E%3Cstop offset='0' stop-color='%23162694'/%3E%3Cstop offset='1' stop-color='%23070d21'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='750' x2='1550' y2='750'%3E%3Cstop offset='0' stop-color='%230f1a5b'/%3E%3Cstop offset='1' stop-color='%23070d21'/%3E%3C/linearGradient%3E%3Cpath id='s' fill='url(%23b)' d='M1549.2 51.6c-5.4 99.1-20.2 197.6-44.2 293.6c-24.1 96-57.4 189.4-99.3 278.6c-41.9 89.2-92.4 174.1-150.3 253.3c-58 79.2-123.4 152.6-195.1 219c-71.7 66.4-149.6 125.8-232.2 177.2c-82.7 51.4-170.1 94.7-260.7 129.1c-90.6 34.4-184.4 60-279.5 76.3C192.6 1495 96.1 1502 0 1500c96.1-2.1 191.8-13.3 285.4-33.6c93.6-20.2 185-49.5 272.5-87.2c87.6-37.7 171.3-83.8 249.6-137.3c78.4-53.5 151.5-114.5 217.9-181.7c66.5-67.2 126.4-140.7 178.6-218.9c52.3-78.3 96.9-161.4 133-247.9c36.1-86.5 63.8-176.2 82.6-267.6c18.8-91.4 28.6-184.4 29.6-277.4c0.3-27.6 23.2-48.7 50.8-48.4s49.5 21.8 49.2 49.5c0 0.7 0 1.3-0.1 2L1549.2 51.6z'/%3E%3Cg id='g'%3E%3Cuse href='%23s' transform='scale(0.12) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.2) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.25) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(0.3) rotate(-20)'/%3E%3Cuse href='%23s' transform='scale(0.4) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(0.5) rotate(20)'/%3E%3Cuse href='%23s' transform='scale(0.6) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.7) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.835) rotate(-40)'/%3E%3Cuse href='%23s' transform='scale(0.9) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(1.05) rotate(25)'/%3E%3Cuse href='%23s' transform='scale(1.2) rotate(8)'/%3E%3Cuse href='%23s' transform='scale(1.333) rotate(-60)'/%3E%3Cuse href='%23s' transform='scale(1.45) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(1.6) rotate(10)'/%3E%3C/g%3E%3C/defs%3E%3Cg transform='rotate(0 0 0)'%3E%3Cg transform='rotate(0 0 0)'%3E%3Ccircle fill='url(%23a)' r='3000'/%3E%3Cg opacity='0.5'%3E%3Ccircle fill='url(%23a)' r='2000'/%3E%3Ccircle fill='url(%23a)' r='1800'/%3E%3Ccircle fill='url(%23a)' r='1700'/%3E%3Ccircle fill='url(%23a)' r='1651'/%3E%3Ccircle fill='url(%23a)' r='1450'/%3E%3Ccircle fill='url(%23a)' r='1250'/%3E%3Ccircle fill='url(%23a)' r='1175'/%3E%3Ccircle fill='url(%23a)' r='900'/%3E%3Ccircle fill='url(%23a)' r='750'/%3E%3Ccircle fill='url(%23a)' r='500'/%3E%3Ccircle fill='url(%23a)' r='380'/%3E%3Ccircle fill='url(%23a)' r='250'/%3E%3C/g%3E%3Cg transform='rotate(0 0 0)'%3E%3Cuse href='%23g' transform='rotate(10)'/%3E%3Cuse href='%23g' transform='rotate(120)'/%3E%3Cuse href='%23g' transform='rotate(240)'/%3E%3C/g%3E%3Ccircle fill-opacity='0.1' fill='url(%23a)' r='3000'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
     background-attachment: fixed;
@@ -15,10 +16,11 @@ html{
     background-attachment: fixed;
 }
 #name{
-    background-color: rgb(89, 131, 230); 
+    background: linear-gradient(to right,rgb(60, 53, 158),rgb(96, 105, 238));
     color: white;
     margin: 0;
     padding: 25px 20px;
+    text-align: center;
     font-size: 24px;
     font-weight: bold;
     font-family: 'Montserrat',sans-serif;
@@ -26,9 +28,9 @@ html{
     border-radius:30px 30px 0px 0px;
 }
 #container{
-    width: 35%;
+    width: 40%;
     background: none;
-    margin:10% 10%;
+    margin:5% 10%;
     box-shadow: 20px 20px 50px rgb(0, 0, 0,0.5);
     border-radius:30px 30px 0px 0px;
 }
@@ -41,7 +43,7 @@ html{
     margin: 0;
     padding: 0;
     height: auto;
-    max-height: 250px;
+    max-height: 350px;
     overflow: scroll;
 }
 .todo-list{
@@ -53,6 +55,11 @@ html{
     box-sizing: border-box;
     overflow: scroll;
 }
+.todo-list .new{
+    width: 40px;
+    max-width: 40px;
+    opacity: 1.0;
+}
 .todo-list:hover span{
     width: 50px;
     opacity: 1.0;
@@ -62,7 +69,7 @@ html{
 }
 .todo-add-text{
     font-size: 18px;
-    background-color: rgba(24, 25, 29,1);
+    background-color: rgb(22, 27, 46);
     width: 100%;
     margin: 0;
     color: #888;
@@ -71,8 +78,8 @@ html{
     border: 3px solid rgba(0, 0, 0, 0);
     transition: all linear 500ms;
 }
-input::placeholder{
-    color: #333;
+.todo-add-text::placeholder{
+    color: rgb(207, 211, 224);
     font-weight: bold;
 }
 .todo-add-text:focus{
@@ -114,6 +121,7 @@ span{
     padding: 5px;
     box-sizing: border-box;
     overflow: scroll;
+    border: 0.5px solid rgba(224, 231, 247,1);
 }
 .toggle-mode-li:nth-child(2n){
     background-color: #eee;
@@ -122,19 +130,30 @@ span{
     width: 50px;
     opacity: 1.0;
 }
+.toggle-mode-li .new{
+    width: 40px;
+    margin-top: auto;
+    max-width: 40px;
+    opacity: 1.0;
+}
 .toggle-todo-add-text{
     font-size: 18px;
-    background-color: rgb(214, 216, 224);
+    background-color:rgb(224, 231, 247);
     width: 100%;
     margin: 0;
-    color: #333;
+    color: rgb(138, 169, 209);
     padding: 17px 10px;
     box-sizing: border-box;
     border: 3px solid rgba(0, 0, 0, 0);
     transition: all linear 500ms;
 }
+.toggle-todo-add-text::placeholder{
+    color: #aaa;
+    font-weight: bold;
+}
 .toggle-todo-add-text:focus{
-    background-color:rgb(178, 179, 185);
+    background-color:rgb(244, 245, 248);
+    color:#666;
     outline: none;
 }
 @media screen and (max-width: 760px){
